// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Lindsay McIntosh, Scottish Political Editor
  </div>
</div>
`;

exports[`2. with the author in the begining 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Camilla Long
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    , Environment Editor
  </div>
</div>
`;

exports[`3. with the author at the end 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    RBS Six Nations, 
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Mike Atherton
  </div>
</div>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Camilla Long
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
     | 
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Mike Atherton
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
     | 
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Camilla Long
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    , 
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Mike Atherton
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    , 
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Camilla Long
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
     
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Mike Atherton
  </div>
  <div
    className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
  >
    Alexandra Frean
  </div>
</div>
`;

exports[`7. null with an empty ast 1`] = `null`;

exports[`8. main standard template - single inline element 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Lindsay McIntosh, Scottish Political Editor
    </div>
  </span>
</div>
`;

exports[`9. main standard template - with the author in the beginning 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Camilla Long
    </div>
    <div
      className="css-text-901oao"
    >
      , 
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Environment Editor
    </div>
  </span>
</div>
`;

exports[`10. main standard template - with the author at the end 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      RBS Six Nations
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
      >
        , 
      </span>
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Mike Atherton
    </div>
    
  </span>
</div>
`;

exports[`11. main standard template - with multiple authors separated by a pipe, parsed and replaced with commas 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Camilla Long
    </div>
    <div
      className="css-text-901oao"
    >
      , 
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Mike Atherton
    </div>
    <div
      className="css-text-901oao"
    >
      , 
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Alexandra Frean
    </div>
    
  </span>
</div>
`;

exports[`12. main standard template - with multiple authors separated by text with commas 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Camilla Long
    </div>
    <div
      className="css-text-901oao"
    >
      , 
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Mike Atherton
    </div>
    <div
      className="css-text-901oao"
    >
      , 
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Alexandra Frean
    </div>
    
  </span>
</div>
`;

exports[`13. main standard template - with multiple authors separated by spaces 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Camilla Long
    </div>
    <div
      className="css-text-901oao"
    >
      , 
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Mike Atherton
    </div>
    <div
      className="css-text-901oao"
    >
      , 
    </div>
  </span>
  <span
    className="responsiveweb-e5ajv9-0 gOHwqY"
  >
    <div
      className="css-text-901oao r-color-1dunems r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw"
    >
      Alexandra Frean
    </div>
    
  </span>
</div>
`;
